fix: Restaurant Reviews: Stage 1 Review Feedback fixes
[3 specifications require changes]

1. On the main page, the media query that handles the card size is incorrect, the card takes the full width of the screen on large screens which makes it look pixelated

2. The image on the restaurant's details page is too stretched

3. a) The restaurant's name on both the HTML page is enclosed in <h1> tag, but <h1> tag is already being used in the navbar title. This is semantically incorrect so you need to enclose the restaurant name in a heading tag with lower semantic value like <h2> or <h3>.

   b) The <ul> breadcrumb needs an appropriate role as its purpose is navigation but it is not enclosed inside a <nav> tag.

[Code Review Comments]

 restaurant.html
 ---------------
  - The <meta> tags should be on the top inside the <head>.
  - Remove this title you have given it twice for one HTML page
  - restaurant_name heading cannot be h1 as h1 is already used in navbar title.

 restaurant_info.js
 ---------------
  - Avoid using var when you are using ES6 let and const.

 README.md
 ---------
  - You should write the README yourself, it's a good developer practice.

[*** Done but could not get it to work ***]

 dbhelper.js
 ------------
  - You can try and use JS fetch here instead of XMLHttpRequest.

 [Student Comment]
  - I tried this, see commented out code in fetchRestaurants() function, but i kept getting errors that suggested the restaurants was no being returned as an array so i tried Array.from(restaurants) to type cast it as an array with no luck. I did however confirm that he PromisedValue return by the fetch was indeed an array but could not figure out why by the time it got to the callback function it seemed to not be an array. Any ideas or suggestions? I have saved the errors and a screenshot in a reviews folder in the project root.

--- a/css/styles.css
+++ b/css/styles.css
@@ -37,7 +37,7 @@ h1, h2, h3, h4, h5, h6 {
   margin: 0 0 20px;
 }
 article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
-	display: grid;
+	/*display: grid;*/
 }
 figure{
   margin: 10px 0;
@@ -51,7 +51,7 @@ figure{
   color: #aaa;
   font-size: 8pt;
   letter-spacing: 1px;
-  padding: 25px;
+  /*padding: 25px;*/
   text-align: center;
   text-transform: uppercase;
 }
@@ -88,7 +88,7 @@ nav h1 a img{
     background-color: #eee;
     font-size: 17px;
     margin: 0;
-    width: calc(100% - 40px);
+    /*width: calc(100% - 40px);*/
 }
 
 /* Display list items side by side */
@@ -161,6 +161,8 @@ nav h1 a img{
   flex-wrap: wrap;
   height: 100%;
   text-align: center;
+	width: 100%;
+	justify-content: space-evenly;
 }
 #restaurants-list li {
   background-color: #fff;
@@ -169,9 +171,10 @@ nav h1 a img{
   margin: 15px;
   min-height: 380px;
   padding: 0 30px 25px;
-  text-align: left;
+  text-align: center;
   min-width: 250px;
-  width: calc(100% - 2vw);
+  /*width: calc(100% - 2vw);*/
+	width: 100%;
   display: inline-block;
 }
 #restaurants-list .restaurant-img {
@@ -180,8 +183,8 @@ nav h1 a img{
   margin: 0;
   max-width: 100%;
   height: auto;
-  min-height: 248px;
-  min-width: 100%;
+  /*min-height: 248px;*/
+  width: 100%;
 }
 #restaurants-list li h1 {
   color: #f18200;
@@ -221,7 +224,7 @@ nav h1 a img{
   text-align: center;
   text-decoration: none;
   text-transform: uppercase;
-	min-width: 300px;
+	width: 100%;
 }
 #restaurants-list li button:focus,
 #restaurants-list li button:hover{
@@ -233,10 +236,10 @@ nav h1 a img{
 }
 /* ====================== Restaurant Details ====================== */
 .inside header {
-  top: 0;
+  /*top: 0;
   width: 100%;
   z-index: 1000;
-  display: inline-block
+  display: inline-block*/
 }
 .inside #maincontent{
 	display: flex;
@@ -297,17 +300,21 @@ nav h1 a img{
 #restaurant-container, #reviews-container {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
-  padding: 10px;
-  width: 100%;
-	display: flex;
-  flex-wrap: wrap;
+  /*padding: 10px;
+  width: 100%;*/
+	padding: 20px 40px;
+}
+#restaurant-container {
+  width: 40%;
 }
 #reviews-container {
-  padding: 30px 40px 80px;
+  /*padding: 30px 40px 40px;*/
+	padding-bottom: 0;
+	width: 50%;
 }
 #reviews-container h2 {
   color: #f58500;
-  font-size: 24pt;
+  /*font-size: 24pt;*/
   font-weight: 300;
   letter-spacing: -1px;
   padding-bottom: 1pt;
@@ -318,14 +325,14 @@ nav h1 a img{
 }
 #reviews-list li {
   background-color: #fff;
-  border: 2px solid #f3f3f3;
+  border: 1px solid #f3f3f3;
   display: block;
   list-style-type: none;
   margin: 0 0 30px;
   overflow: hidden;
   padding: 0 20px 20px;
   position: relative;
-  width: 100%;
+  /*width: 100%;*/
 }
 #reviews-list li p {
   margin: 0 0 10px;
@@ -334,58 +341,44 @@ nav h1 a img{
   color: #666;
 }
 /* Responsive Styles */
-@media screen and (min-width: 800px) {
-	.inside #restaurant_container {
-		width: 50%;
-		order: 1;
-	}
-	.inside #reviews_container {
-		width: 50%;
-		order: 2;
-	}
-  #restaurants-list li p {
-    padding: 0 15px;
+@media screen and (min-width: 1024px) {
+  #restaurant-container {
+    width: 40%;
   }
-  #restaurant-name {
-    grid-column: 1;
-    grid-row: 1;
-    margin: 0 0 15px 0;
-    border: 0;
-    font-size: 30px;
+  #reviews-container {
+    width: 50%;
   }
-  #restaurant-address {
-    grid-column: 2;
-    grid-row: 3;
-    margin: 0;
-    padding: 10px 0;
-  }
-  #restaurant-cuisine {
-    grid-column: 2;
-    grid-row: 2;
-    text-align: center;
-    padding: 12px 0;
-    font-size: 20px;
-  }
-  #restaurant-hours {
-    grid-column: 2;
-    grid-row: 4 / 5;
-    margin: 0;
-    padding: 10px;
-    background: #fff;
-    width: calc(100% - 20px);
-    color: #333;
-  }
-  #reviews-list li{
-    width: calc((100% - 80px)/2)
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  #restaurants-list li{
+	#restaurants-list li{
     width: calc((100% - 300px)/3);
     max-width: 436px;
   }
-  #reviews-list li{
-    width: calc((100% - 60px)/3);
+}
+@media screen and (max-width: 768px) {
+  #restaurant-container, #reviews-container {
+    width: 50%;
+  }
+}
+@media screen and (min-width: 701px) and (max-width: 1023px) {
+	#restaurants-list li{
+		width: calc((100% - 300px)/2);
+		max-width: 436px;
+	}
+}
+@media screen and (min-width: 701px) {
+	#restaurant-container {
+    width: 38%;
+		padding: 12px;
+  }
+  #reviews-container {
+    width: 50%;
+		padding: 12px;
+  }
+}
+@media screen and (max-width: 700px) {
+	#restaurants-list {
+		width: 100%;
+	}
+	#restaurant-container, #reviews-container, #breadcrumb {
+    width: 100%;
   }
 }
